--- a/style.css
+++ b/style.css
@@ -1,243 +1,300 @@
-body{
-    background-color: #19191B;
-    color: white;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    font-family: "Nunito Sans", sans-serif;
+body {
+  background-color: #19191b;
+  color: white;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  font-family: "Nunito Sans", sans-serif;
 }
-.bg_gradient{
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
+.bg_gradient {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
 }
-.container{
-    width: 90%;
-    margin: auto;
+.container {
+  width: 90%;
+  margin: auto;
+}
 
+/* buger menu start  */
+
+.burger-menu {
+  display: none;
+  width: 98%;
+  height: min-content;
+  background-color: #2c2c33;
+  position: absolute;
+  z-index: 1;
+  top: 1%;
+  right: 1%;
+  left: 1%;
+  border-radius: 10px;
+  border: 2px solid white;
 }
+.burger-menu__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.burger-menu__btn_close {
+  width: 4%;
+  height: 7%;
+  margin: 4% 0;
+  cursor: pointer;
+}
+.burger-menu__input {
+  width: 30%;
+  height: 10%;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+.burger-menu__list {
+  height: 60%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.burger__item > a {
+  text-decoration: none;
+  color: white;
+  transition: 0.8s;
+}
+.burger__item > a:hover {
+  color: #5454d4;
+}
+
+/* burger menu end  */
 
 /* navbar start */
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.navbar__logo{
-    width: 10%;
+.navbar__logo {
+  width: 10%;
 }
-.navbar__list{
-    display: flex;
-    list-style-type: none;
-    width: 30%;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
+.navbar__list {
+  display: flex;
+  list-style-type: none;
+  width: 30%;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
 }
-.list__item > a{
-    text-decoration: none;
-    color: white;
+.list__item > a {
+  text-decoration: none;
+  color: white;
 }
-.navbar__input{
-    background-color: transparent;
-    width: 15%;
-    height: 25px;
-    border-radius: 5px;
-    border: 1px solid white;
+.navbar__input {
+  background-color: transparent;
+  width: 15%;
+  height: 25px;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+.navbar__btn_burger {
+  display: none;
 }
 
 /* navbar end */
 
 /* header start */
 
-header{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
+header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
 }
-.header__block_left{
-    width: 40%;
+.header__block_left {
+  width: 40%;
 }
-.header__title_left{
-    font-size: 80px;
-    line-height: 1;
-    margin-top: 25%;
-    margin-bottom: 0;
+.header__title_left {
+  font-size: 80px;
+  line-height: 1;
+  margin-top: 25%;
+  margin-bottom: 0;
 }
-.header__desc_left{
-    font-size: 21px;
-    line-height: 2;
+.header__desc_left {
+  font-size: 21px;
+  line-height: 2;
 }
-.header__btn{
-    width: 35%;
-    height: 60px;
-    background-color: #5454D4;
-    color: white;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 5px;
-    padding: 1%;
+.header__btn {
+  width: 35%;
+  height: 60px;
+  background-color: #5454d4;
+  color: white;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 1%;
 }
-.btn__icon{
-    margin-left: 7px;
+.btn__icon {
+  margin-left: 7px;
 }
-.header__block_right{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    position: relative;
+.header__block_right {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
-.vector{
-    position: absolute;
+.vector {
+  position: absolute;
 }
-#vector_1{
-    top: 124px;
-    left: -81px;
+#vector_1 {
+  top: 124px;
+  left: -81px;
 }
-#vector_2{
-    top: 77px;
-    right: 54px;    
+#vector_2 {
+  top: 77px;
+  right: 54px;
 }
-#vector_3{
-    bottom: 20px;
-    left: -120px;
+#vector_3 {
+  bottom: 20px;
+  left: -120px;
 }
-#vector_4{
-    bottom: 54px;
-    right: 54px;
+#vector_4 {
+  bottom: 54px;
+  right: 54px;
 }
 
 /* header style end  */
 
 /* services style start */
 
-.services{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.services {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.services__title_main{
-    font-size: 60px;
-    font-weight: 700;
-    text-align: center;
-    width: 50%;
-    font-family: "Open_Sans", sans-serif;
+.services__title_main {
+  font-size: 60px;
+  font-weight: 700;
+  text-align: center;
+  width: 50%;
+  font-family: "Open_Sans", sans-serif;
 }
-.services__list{
-    display: flex;
-    list-style-type: none;
-    width: 100%;
-    flex-wrap: wrap;
+.services__list {
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  flex-wrap: wrap;
 }
-.services__item{
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: 0 5%;
-    margin-bottom: 25px;
+.services__item {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin: 0 5%;
+  margin-bottom: 25px;
 }
-.services__title{
-    font-size: 28px;
-    font-weight: 600;
-    margin-bottom: 0;
+.services__title {
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 0;
 }
-.services__desc{
-    font-size: 20px;
-    color: #FFFFFF;
-    opacity: 70%;
+.services__desc {
+  font-size: 20px;
+  color: #ffffff;
+  opacity: 70%;
 }
 
 /* services style end */
 
 /* portfolio block start  */
 
-.portfolio__title{
-    font-size: 58px;
-    font-weight: 800;
+.portfolio__title {
+  font-size: 58px;
+  font-weight: 800;
 }
-.portfolio__list{
-    display: flex;
-    list-style-type: none;
-    width: 100%;
-    justify-content: space-evenly;
+.portfolio__list {
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  justify-content: space-evenly;
 }
-.portfolio__list_item{
-    background-color: #1e1e20;
-    border-radius: 15px;
-    padding: 1.5%;
-    height: min-content;
+.portfolio__list_item {
+  background-color: #1e1e20;
+  border-radius: 15px;
+  padding: 1.5%;
+  height: min-content;
 }
-.portfolio__list_item:nth-child(2){
-    margin-top: 90px;
+.portfolio__list_item:nth-child(2) {
+  margin-top: 90px;
 }
-.portfolio__list_item:nth-child(3){
-    margin-top: 180px;
+.portfolio__list_item:nth-child(3) {
+  margin-top: 180px;
 }
-.portfolio__icon_second{
-    display: none;
+.portfolio__icon_second {
+  display: none;
 }
-.portfolio__icon{
-    margin-left: 50%;
-    margin-top: 50px;
+.portfolio__icon {
+  margin-left: 50%;
+  margin-top: 50px;
 }
 
 /* portfolio block end  */
 
 /* info_block start  */
 
-.info__block{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 120px;
+.info__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 120px;
 }
-.info__block_title{
-    font-size: 60px;
-    font-weight: 700;
-    width: 60%;
+.info__block_title {
+  font-size: 60px;
+  font-weight: 700;
+  width: 60%;
 }
-.info__block_btn{
-    background-color: #5454d4;
-    color: white;
-    border: none;
-    font-size: 21px;
-    font-weight: 700;
-    border-radius: 8px;
-    width: 15%;
-    height: 60px;
-    cursor: pointer;
+.info__block_btn {
+  background-color: #5454d4;
+  color: white;
+  border: none;
+  font-size: 21px;
+  font-weight: 700;
+  border-radius: 8px;
+  width: 15%;
+  height: 60px;
+  cursor: pointer;
 }
 
 /* info_block end */
 
 /* footer block start  */
 
-footer{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-    color: #68696a;
+footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  color: #68696a;
 }
-.footer__logo{
-    width: 132px;
-    height: 40px;
+.footer__logo {
+  width: 132px;
+  height: 40px;
 }
-.footer__list{
-    display: flex;
-    list-style-type: none;
-    width: 30%;
-    justify-content: space-between;
+.footer__list {
+  display: flex;
+  list-style-type: none;
+  width: 30%;
+  justify-content: space-between;
 }
 /* footer block end  */
