--- a/adaptive_style.css
+++ b/adaptive_style.css
@@ -74,4 +74,151 @@
     font-size: 15px;
     text-align: center;
   }
+  .footer__list_item {
+    margin-right: 10px;
+  }
+  header {
+    flex-direction: column;
+  }
+  .header__block_left {
+    width: 80%;
+  }
+  .header__block_right {
+    width: 80%;
+    align-self: center;
+  }
+  .header__title_left {
+    margin-top: 15%;
+  }
+  .navbar__logo {
+    width: 20%;
+  }
+  .services__item {
+    width: 40%;
+  }
+}
+@media all and (max-width: 426px) {
+  .navbar__list,
+  .navbar__input {
+    display: none;
+  }
+  .navbar__btn_burger {
+    display: block;
+  }
+  .burger-menu__list {
+    padding-left: 0;
+  }
+  .header__title_left {
+    margin-top: 0;
+  }
+  .header__btn {
+    width: 50%;
+  }
+  .header__img {
+    height: 500px;
+  }
+  .header__block_right {
+    width: 100%;
+  }
+  #vector_1 {
+    left: 0;
+    top: 87px;
+  }
+  .services__title_main {
+    width: 80%;
+  }
+  .services__list {
+    justify-content: center;
+    padding-left: 0;
+  }
+  .services__item {
+    width: 70%;
+  }
+  .portfolio__list_item:nth-child(2),
+  .portfolio__list_item:nth-child(3) {
+    display: none;
+  }
+  .portfolio__list_item {
+    width: 70%;
+  }
+  .portfolio__title {
+    font-size: 45px;
+  }
+  .portfolio__icon {
+    display: none;
+  }
+  .portfolio__icon_second {
+    display: block;
+    margin: 0 auto;
+  }
+  .info__block_title {
+    font-size: 30px;
+    width: 80%;
+  }
+  .info__block {
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+  }
+  .info__block_btn {
+    font-size: 15px;
+    width: 35%;
+    height: 40px;
+  }
+  footer {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0 0 0;
+  }
+  .footer__list {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  .footer__list_item {
+    margin-bottom: 5px;
+  }
+  .footer__info {
+    margin-top: 0;
+    width: 100%;
+  }
+}
+@media all and (max-width: 376px) {
+  .header__btn {
+    width: 60%;
+  }
+  .header__img {
+    height: 400px;
+  }
+  #vector_3 {
+    bottom: -20px;
+  }
+  #vector_4 {
+    bottom: -12px;
+    right: 12px;
+  }
+  #vector_2 {
+    right: 12px;
+  }
+  .services__title_main {
+    width: 100%;
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+}
+@media all and (max-width: 321px) {
+  .header__desc_left {
+    font-size: 16px;
+    line-height: 1.2;
+  }
+  .header__btn {
+    width: 100%;
+  }
+  .info__block_btn {
+    width: 40%;
+  }
+  .footer__list {
+    width: 100%;
+  }
 }
